--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,13 +19,14 @@
               <li><%= link_to "會員資料編輯", edit_user_path(current_user) %></li>
               <li><%= link_to "消費歷史紀錄", user_orders_path(current_user) %></li>
               <li class="divider"></li>
+              <% if current_user.is_owner %>
+                <li><%= link_to "商家訂單顯示", owner_orders_path %></li>
+                <li><%= link_to "商家優惠管理", owner_events_path %></li>
+                <li class="divider"></li>
+              <% end %>
               <% if current_user.is_admin %>
                 <li><%= link_to "會員列表檢視", admin_users_path %></li>
                 <li><%= link_to "會員訂單管理", admin_orders_path %></li>
-                <li class="divider"></li>
-              <% end %>
-              <% if current_user.is_owner %>
-                <li><%= link_to "活動列表檢視", owner_events_path %></li>
                 <li class="divider"></li>
               <% end %>
               <li>
