Finish all events major changes

--- a/app/views/carts/confirm.html.erb
+++ b/app/views/carts/confirm.html.erb
@@ -22,5 +22,5 @@
   </div>
 </div>
 
-<%= render 'carts/total_price_row' %>
+<%= render 'carts/total_price_row', this_order: current_order %>
 <%= render 'carts/confirmation_button_row' %>
