--- a/app/views/orders/_show.html.erb
+++ b/app/views/orders/_show.html.erb
@@ -19,22 +19,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <ul class="list-group">
-      <li class="list-group-item">
-        <div class="text-right">
-          <span style="font-size: 1.2em">商品合計: NT<span style="color: green"><%= number_to_currency order.total_price %></span></span>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="text-right">
-          <span style="font-size: 1.2em">總價: NT<span style="color: green"><%= number_to_currency order.total_price %></span></span>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
+
+<%= render 'carts/total_price_row', this_order: order %>
 
 
 <div class="row">
