Change hidden form tags

--- a/app/views/owner/stores/_form.html.erb
+++ b/app/views/owner/stores/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:owner, store] do |f| %>
+<%= form_for [:owner, store], html: { class: "myForm" } do |f| %>
   <%= render 'shared/error_messages', item: store %>
 
   <%= f.label :name, "店名" %>
