--- a/app/views/owner/items/edit.html.erb
+++ b/app/views/owner/items/edit.html.erb
@@ -2,7 +2,7 @@
 <h1>商品修改</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for [:owner, @item] do |f| %>
+    <%= form_for [:owner, @item], html: { class: "myForm" }  do |f| %>
       <%= render 'form', item: @item, f:f %>
     <% end %>
   </div>
