--- a/app/views/owner/items/new.html.erb
+++ b/app/views/owner/items/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for [:owner,@store, @item] do |f| %>
+    <%= form_for [:owner,@store, @item], html: { class: "myForm" }  do |f| %>
       <%= render 'form', item: @item, f:f %>
     <% end %>
   </div>
